--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "balck_seed",
-    "short_name": "balck_seed",
+    "name": "black_seed",
+    "short_name": "black_seed",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
