--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "balck_seed" "\0"
+            VALUE "FileDescription", "black_seed" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "balck_seed" "\0"
+            VALUE "InternalName", "black_seed" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "balck_seed.exe" "\0"
-            VALUE "ProductName", "balck_seed" "\0"
+            VALUE "OriginalFilename", "black_seed.exe" "\0"
+            VALUE "ProductName", "black_seed" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
